<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        style="@style/LoginFormContainer"
        android:orientation="vertical"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <EditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_first_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff" />
            <EditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_last_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="#ffffff"
                android:textColor="#ffffff" />
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="#ffffff"
                android:textColor="#ffffff" />
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/desired_username"
                android:maxLines="1"
                android:singleLine="true"
                android:password="false"
                android:textColorHint="#ffffff"
                android:textColor="#ffffff" />
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/desired_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:password="true"
                android:textColorHint="#ffffff"
                android:textColor="#ffffff" />

            <EditText
                android:id="@+id/favgame"
                android:hint="@string/fav_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="#ffffff"
                android:textColor="#ffffff"
                android:layout_marginTop="40dp" />

            <EditText
                android:id="@+id/favgenre"
                android:hint="@string/fav_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="#ffffff"/>

            <EditText
                android:id="@+id/console"
                android:hint="@string/console_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="#ffffff"/>

            <Button
                android:id="@+id/sign_up_action_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="Save" />

        </LinearLayout>


    </ScrollView>

</FrameLayout>
